# language_wars

./: .gitignore  JUDGING.md  LICENSE  Makefile  README.md  build.sh  clean.sh  file_generator  file_generator_mb  judging.md  judging.sh  produce_x  run.sh  unique_word_result.sh
file_generator/: .gitignore  README.md
file_generator/src/: main.rs
sorter/.cargo/: config.toml
test_cases/: edge_case.txt  unicode.txt
utils/: README.md
utils/file_generator/: Cargo.toml
utils/file_generator/src/: main.rs
utils/sorter/: .gitignore  Cargo.toml
utils/sorter/src/: main.rs
